--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack --progress --profile --colors",
     "build": "webpack --progress --profile --colors",
     "dev": "webpack-dev-server --progress --profile --colors",
-    "test": "mocha --compilers js:babel-core/register --require ./tests/test_helper.js  --recursive",
+    "test": "mocha --compilers js:babel-core/register --require ./test/test_helper.js  --recursive",
     "test:watch": "npm run test -- --watch"
   },
   "repository": {
@@ -53,6 +53,7 @@
     "node-libs-browser": "0.5.3",
     "parse": "^1.6.13",
     "react": "0.14.3",
+    "react-addons-test-utils": "^0.14.7",
     "react-bootstrap": "^0.28.2",
     "react-dom": "0.14.3",
     "react-redux": "^4.0.4",
